--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/all.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald&family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+
 
     <meta name="theme-color" content="#fafafa">
 </head>
