Creando estilos en la barra de Menú

--- a/index.html
+++ b/index.html
@@ -43,12 +43,36 @@
                         <p class="location"><i class="fas fa-map-marker-alt"></i> Buenos Aires - Arg</p>
                     </div>
                     <h1 class="name-website">BsAsWebCamp</h1>
-                    <p class="slogan">La mejor conferencia de <span>Diseño Web</span></p>
+                    <p class="slogan"></p>La mejor conferencia de <span>Diseño Web</span></p>
                 </div>
 
             </div>
         </div>
     </header>
+
+    <div class="main-menu">
+
+        <div class="container clearfix">
+
+
+            <div class="logo">
+                <img src="img/logo.svg" alt="logo">
+            </div>
+            <div class="mobile-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+            <nav class="main-navigation">
+                <a href="#">Conferencia</a>
+                <a href="#">Calendario</a>
+                <a href="#">Invitados</a>
+                <a href="#">Reservaciones</a>
+            </nav>
+        </div>
+
+    </div>
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script>
