Creando un Menú Mobile FIrst

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <span></span>
             </div>
 
-            <nav class="main-navigation">
+            <nav class="main-navigation clearfix">
                 <a href="#">Conferencia</a>
                 <a href="#">Calendario</a>
                 <a href="#">Invitados</a>
