Creando descripción del evento y dando estilos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <p class="location"><i class="fas fa-map-marker-alt"></i> Buenos Aires - Arg</p>
                     </div>
                     <h1 class="name-website">BsAsWebCamp</h1>
-                    <p class="slogan"></p>La mejor conferencia de <span>Diseño Web</span></p>
+                    <p class="slogan">La mejor conferencia de <span>Diseño Web</span></p>
                 </div>
 
             </div>
@@ -73,6 +73,15 @@
         </div>
 
     </div>
+
+    <section class="section container">
+        <h2>La mejor conferencia de Diseño Web</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin arcu orci, ultricies vel enim vel, faucibus auctor eros. Aenean ut tellus id justo commodo sollicitudin. Quisque id volutpat felis, sit amet efficitur dolor. Vestibulum imperdiet leo
+            ac auctor venenatis. Phasellus purus augue, ullamcorper vitae arcu efficitur, sollicitudin lacinia ligula.
+        </p>
+    </section>
+
+
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script>
