Agregando video html para la sección de información del evento

--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
         </p>
     </section>
 
+    <section class="event-information">
+        <div class="video-container">
+            <video autoplay loop poster="bg-talleres.jpg">
+                <source src="video/video.mp4" type="video/mp4">
+                <source src="video/video.webm" type="video/webm">
+                <source src="video/video.ogv" type="video/ogv">
+            </video>
+        </div>
+    </section>
+
 
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
