Creando Menú del evento

--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@
                 <source src="video/video.ogv" type="video/ogv">
             </video>
         </div>
+        <!--video-container-->
+
+        <div class="event-content">
+            <div class="container">
+                <h2>Programa del evento</h2>
+                <nav class="event-menu">
+                    <a href="#"><i class="fas fa-code"></i>Talleres </a>
+                    <a href="#"><i class="fas fa-comment"></i>Conferencias</a>
+                    <a href="#"><i class="fas fa-university"></i>Seminarios</a>
+
+                </nav>
+            </div>
+        </div>
     </section>
 
 
