Creando conferencia y enlistando items

--- a/index.html
+++ b/index.html
@@ -95,11 +95,25 @@
             <div class="container">
                 <h2>Programa del evento</h2>
                 <nav class="event-menu">
-                    <a href="#"><i class="fas fa-code"></i>Talleres </a>
-                    <a href="#"><i class="fas fa-comment"></i>Conferencias</a>
-                    <a href="#"><i class="fas fa-university"></i>Seminarios</a>
-
+                    <a href="#talleres"><i class="fas fa-code"></i>Talleres </a>
+                    <a href="#conferencias"><i class="fas fa-comment"></i>Conferencias</a>
+                    <a href="#seminarios"><i class="fas fa-university"></i>Seminarios</a>
                 </nav>
+                <div id="talleres" class="class-info hiden clearfix">
+                    <div class="event-detail">
+                        <h3>Html5, Css3 y Javascript</h3>
+                        <p><i class="fas fa-clock-o"></i>10:00 hs</p>
+                        <p><i class="fas fa-calendar-alt"></i>10 dic</p>
+                        <p><i class="fas fa-user"></i>Miguel Zapata</p>
+                    </div>
+                    <div class="event-detail">
+                        <h3>Responsive Web Design</h3>
+                        <p><i class="fas fa-clock-o"></i>20:00 hs</p>
+                        <p><i class="fas fa-calendar-alt"></i>10 dic</p>
+                        <p><i class="fas fa-user"></i>Miguel Zapata</p>
+                    </div>
+                    <a href="#" class="button float-right">Ver Todos</a>
+                </div>
             </div>
         </div>
     </section>
