Creando estilos para la sección de conferencias

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 
     <header class="site-header">
         <div class="hero">
-            <div class="header-content">
-                <nav class="social-networks">
+            <div class="contenido-header">
+                <nav class="redes-sociales">
                     <a href=""><i class="fab fa-facebook-f"></i></a>
                     <a href=""><i class="fab fa-twitter"></i></a>
                     <a href=""><i class="fab fa-pinterest-p"></i></a>
                     <a href=""><i class="fab fa-youtube"></i></a>
                     <a href=""><i class="fab fa-instagram"></i></a>
                 </nav>
-                <div class="site-information">
+                <div class="informacion-sitio">
                     <div class="clearfix">
                         <p class="date"><i class="fas fa-calendar-alt"></i> 10-12 Dic</p>
                         <p class="location"><i class="fas fa-map-marker-alt"></i> Buenos Aires - Arg</p>
@@ -50,9 +50,9 @@
         </div>
     </header>
 
-    <div class="main-menu">
+    <div class="menu-principal">
 
-        <div class="container clearfix">
+        <div class="contenedor clearfix">
 
 
             <div class="logo">
@@ -64,7 +64,7 @@
                 <span></span>
             </div>
 
-            <nav class="main-navigation clearfix">
+            <nav class="navegacion-principal clearfix">
                 <a href="#">Conferencia</a>
                 <a href="#">Calendario</a>
                 <a href="#">Invitados</a>
@@ -73,47 +73,51 @@
         </div>
 
     </div>
+    <!--Main Menu-->
 
-    <section class="section container">
+    <section class="section contenedor">
         <h2>La mejor conferencia de Diseño Web</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin arcu orci, ultricies vel enim vel, faucibus auctor eros. Aenean ut tellus id justo commodo sollicitudin. Quisque id volutpat felis, sit amet efficitur dolor. Vestibulum imperdiet leo
             ac auctor venenatis. Phasellus purus augue, ullamcorper vitae arcu efficitur, sollicitudin lacinia ligula.
         </p>
     </section>
 
-    <section class="event-information">
-        <div class="video-container">
+    <section class="programa">
+        <div class="contenedor-video">
             <video autoplay loop poster="bg-talleres.jpg">
                 <source src="video/video.mp4" type="video/mp4">
                 <source src="video/video.webm" type="video/webm">
                 <source src="video/video.ogv" type="video/ogv">
             </video>
         </div>
-        <!--video-container-->
 
-        <div class="event-content">
-            <div class="container">
-                <h2>Programa del evento</h2>
-                <nav class="event-menu">
-                    <a href="#talleres"><i class="fas fa-code"></i>Talleres </a>
-                    <a href="#conferencias"><i class="fas fa-comment"></i>Conferencias</a>
-                    <a href="#seminarios"><i class="fas fa-university"></i>Seminarios</a>
-                </nav>
-                <div id="talleres" class="class-info hiden clearfix">
-                    <div class="event-detail">
-                        <h3>Html5, Css3 y Javascript</h3>
-                        <p><i class="fas fa-clock-o"></i>10:00 hs</p>
-                        <p><i class="fas fa-calendar-alt"></i>10 dic</p>
-                        <p><i class="fas fa-user"></i>Miguel Zapata</p>
+
+        <div class="contenido-programa">
+            <div class="contenedor">
+                <div class="programa-evento">
+                    <h2>Programa del evento</h2>
+                    <nav class="menu-programa">
+                        <a href="#talleres"><i class="fas fa-code"></i>Talleres </a>
+                        <a href="#conferencias"><i class="fas fa-comment"></i>Conferencias</a>
+                        <a href="#seminarios"><i class="fas fa-university"></i>Seminarios</a>
+                    </nav>
+                    <div id="talleres" class="info-curso hiden clearfix">
+                        <div class="detalle-evento">
+                            <h3>Html5, Css3 y Javascript</h3>
+                            <p><i class="fas fa-clock-o"></i>10:00 hs</p>
+                            <p><i class="fas fa-calendar-alt"></i>10 dic</p>
+                            <p><i class="fas fa-user"></i>Miguel Zapata</p>
+                        </div>
+                        <div class="detalle-evento">
+                            <h3>Responsive Web Design</h3>
+                            <p><i class="fas fa-clock-o"></i>20:00 hs</p>
+                            <p><i class="fas fa-calendar-alt"></i>10 dic</p>
+                            <p><i class="fas fa-user"></i>Miguel Zapata</p>
+                        </div>
+                        <a href="#" class="button float-right">Ver Todos</a>
                     </div>
-                    <div class="event-detail">
-                        <h3>Responsive Web Design</h3>
-                        <p><i class="fas fa-clock-o"></i>20:00 hs</p>
-                        <p><i class="fas fa-calendar-alt"></i>10 dic</p>
-                        <p><i class="fas fa-user"></i>Miguel Zapata</p>
-                    </div>
-                    <a href="#" class="button float-right">Ver Todos</a>
                 </div>
+
             </div>
         </div>
     </section>
