Finalizando sección de conferencias

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         </div>
 
     </div>
-    <!--Main Menu-->
+    <!--Menu-->
+
 
     <section class="section contenedor">
         <h2>La mejor conferencia de Diseño Web</h2>
@@ -90,6 +91,7 @@
                 <source src="video/video.ogv" type="video/ogv">
             </video>
         </div>
+        <!---Video-->
 
 
         <div class="contenido-programa">
@@ -104,13 +106,13 @@
                     <div id="talleres" class="info-curso hiden clearfix">
                         <div class="detalle-evento">
                             <h3>Html5, Css3 y Javascript</h3>
-                            <p><i class="fas fa-clock-o"></i>10:00 hs</p>
+                            <p><i class="fas fa-clock"></i>10:00 hs</p>
                             <p><i class="fas fa-calendar-alt"></i>10 dic</p>
                             <p><i class="fas fa-user"></i>Miguel Zapata</p>
                         </div>
                         <div class="detalle-evento">
                             <h3>Responsive Web Design</h3>
-                            <p><i class="fas fa-clock-o"></i>20:00 hs</p>
+                            <p><i class="fas fa-clock"></i>20:00 hs</p>
                             <p><i class="fas fa-calendar-alt"></i>10 dic</p>
                             <p><i class="fas fa-user"></i>Miguel Zapata</p>
                         </div>
