Creando la estructura de la sección de invitados

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <source src="video/video.ogv" type="video/ogv">
             </video>
         </div>
-        <!---Video-->
+
 
 
         <div class="contenido-programa">
@@ -122,6 +122,47 @@
 
             </div>
         </div>
+    </section>
+    <section class="contenedor section invitados">
+        <h2>Nuestros Invitados</h2>
+        <ul class="lista-invitados">
+            <li>
+                <div>
+                    <img src="img/invitados/invitado1.jpg" alt="Imagen Invitado">
+                    <p>Rafael Bautista</p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="img/invitados/invitado2.jpg" alt="Imagen Invitado">
+                    <p>Mica Herrera</p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="img/invitados/invitado3.jpg" alt="Imagen Invitado">
+                    <p>Leandro Gómez</p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="img/invitados/invitado4.jpg" alt="Imagen Invitado">
+                    <p>Stefi Gonzalez</p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="img/invitados/invitado5.jpg" alt="Imagen Invitado">
+                    <p>Marcos Pereyra</p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <img src="img/invitados/invitado6.jpg" alt="Imagen Invitado">
+                    <p>Giselle Montes</p>
+                </div>
+            </li>
+        </ul>
     </section>
 
 
