--- a/index.html
+++ b/index.html
@@ -165,6 +165,27 @@
         </ul>
     </section>
 
+    <div class="contador parallax">
+        <div class="contenedor">
+            <ul class="resumen-evento">
+                <li>
+                    <p class="numero">6</p>Invitados</li>
+            </ul>
+            <ul class="resumen-evento">
+                <li>
+                    <p class="numero">15</p>Talleres</li>
+            </ul>
+            <ul class="resumen-evento">
+                <li>
+                    <p class="numero">3</p>Días</li>
+            </ul>
+            <ul class="resumen-evento">
+                <li>
+                    <p class="numero">9</p>Conferencias</li>
+            </ul>
+        </div>
+    </div>
+
 
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
