Agregando estilos e imagen de fondo al contador

--- a/index.html
+++ b/index.html
@@ -167,19 +167,13 @@
 
     <div class="contador parallax">
         <div class="contenedor">
-            <ul class="resumen-evento">
+            <ul class="resumen-evento clearfix">
                 <li>
                     <p class="numero">6</p>Invitados</li>
-            </ul>
-            <ul class="resumen-evento">
                 <li>
                     <p class="numero">15</p>Talleres</li>
-            </ul>
-            <ul class="resumen-evento">
                 <li>
                     <p class="numero">3</p>Días</li>
-            </ul>
-            <ul class="resumen-evento">
                 <li>
                     <p class="numero">9</p>Conferencias</li>
             </ul>
