--- a/index.html
+++ b/index.html
@@ -180,6 +180,51 @@
         </div>
     </div>
 
+    <section class="precios seccion">
+        <h2>Precios</h2>
+        <div class="contenedor">
+            <ul class="lista-precios clearfix">
+                <li>
+                    <div class="tabla-precios">
+                        <h3>Pase por día</h3>
+                        <p class="numero">$700</p>
+                        <ul>
+                            <li>Todas las Conferencias</li>
+                            <li>Todos los Talleres</li>
+                            <li>Snacks Gratis</li>
+                        </ul>
+                        <a href="#" class="button hollow">Comprar</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="tabla-precios">
+                        <h3>Todos los días</h3>
+                        <p class="numero">$1800</p>
+                        <ul>
+                            <li>Todas las Conferencias</li>
+                            <li>Todos los Talleres</li>
+                            <li>Snacks Gratis</li>
+                        </ul>
+                        <a href="#" class="button">Comprar</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="tabla-precios">
+                        <h3>Pase por 2 día</h3>
+                        <p class="numero">$1300</p>
+                        <ul>
+                            <li>Todas las Conferencias</li>
+                            <li>Todos los Talleres</li>
+                            <li>Snacks Gratis</li>
+                        </ul>
+                        <a href="#" class="button hollow">Comprar</a>
+                    </div>
+                </li>
+            </ul>
+
+        </div>
+    </section>
+
 
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
