--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <section class="programa">
         <div class="contenedor-video">
-            <video autoplay loop poster="bg-talleres.jpg">
+            <video autoplay poster loop poster="bg-talleres.jpg">
                 <source src="video/video.mp4" type="video/mp4">
                 <source src="video/video.webm" type="video/webm">
                 <source src="video/video.ogv" type="video/ogv">
