Agregando detalles de transición a la lista de precios

--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
                         <h3>Pase por día</h3>
                         <p class="numero">$700</p>
                         <ul>
-                            <li>Todas las Conferencias</li>
-                            <li>Todos los Talleres</li>
-                            <li>Snacks Gratis</li>
+                            <li><i class="fas fa-check"></i>Todas las Conferencias</li>
+                            <li><i class="fas fa-check"></i>Todos los Talleres</li>
+                            <li><i class="fas fa-check"></i>Snacks Gratis</li>
                         </ul>
                         <a href="#" class="button hollow">Comprar</a>
                     </div>
@@ -201,9 +201,9 @@
                         <h3>Todos los días</h3>
                         <p class="numero">$1800</p>
                         <ul>
-                            <li>Todas las Conferencias</li>
-                            <li>Todos los Talleres</li>
-                            <li>Snacks Gratis</li>
+                            <li><i class="fas fa-check"></i>Todas las Conferencias</li>
+                            <li><i class="fas fa-check"></i>Todos los Talleres</li>
+                            <li><i class="fas fa-check"></i>Snacks Gratis</li>
                         </ul>
                         <a href="#" class="button">Comprar</a>
                     </div>
@@ -213,9 +213,9 @@
                         <h3>Pase por 2 día</h3>
                         <p class="numero">$1300</p>
                         <ul>
-                            <li>Todas las Conferencias</li>
-                            <li>Todos los Talleres</li>
-                            <li>Snacks Gratis</li>
+                            <li><i class="fas fa-check"></i>Todas las Conferencias</li>
+                            <li><i class="fas fa-check"></i>Todos los Talleres</li>
+                            <li><i class="fas fa-check"></i>Snacks Gratis</li>
                         </ul>
                         <a href="#" class="button hollow">Comprar</a>
                     </div>
