Creando el html de los testimoniales

--- a/index.html
+++ b/index.html
@@ -225,6 +225,36 @@
         </div>
     </section>
 
+    <div class="mapa"></div>
+
+    <section class="tseccion">
+        <h2>testimoniales</h2>
+
+        <div class="testimonial">
+            <blockquote>
+                <p>Sed mollis velit sit amet felis condimentum ultrices. Fusce vehicula ut sem vitae semper. Nullam blandit neque eu semper ullamcorper. Duis commodo quam in orci condimentum ultricies.</p>
+                <footer>
+                    <img src="img/testimonial.jpg" alt="Imágen Testimonial">
+                    <cite>Osvaldo Escobar <span>Diseñador en @prisma</span></cite>
+                </footer>
+            </blockquote>
+            <blockquote>
+                <p>Sed mollis velit sit amet felis condimentum ultrices. Fusce vehicula ut sem vitae semper. Nullam blandit neque eu semper ullamcorper. Duis commodo quam in orci condimentum ultricies.</p>
+                <footer>
+                    <img src="img/testimonial.jpg" alt="Imágen Testimonial">
+                    <cite>Osvaldo Escobar <span>Diseñador en @prisma</span></cite>
+                </footer>
+            </blockquote>
+            <blockquote>
+                <p>Sed mollis velit sit amet felis condimentum ultrices. Fusce vehicula ut sem vitae semper. Nullam blandit neque eu semper ullamcorper. Duis commodo quam in orci condimentum ultricies.</p>
+                <footer>
+                    <img src="img/testimonial.jpg" alt="Imágen Testimonial">
+                    <cite>Osvaldo Escobar <span>Diseñador en @prisma</span></cite>
+                </footer>
+            </blockquote>
+        </div>
+    </section>
+
 
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
