Dando estilos al blockquote

--- a/index.html
+++ b/index.html
@@ -227,31 +227,40 @@
 
     <div class="mapa"></div>
 
-    <section class="tseccion">
+    <section class="seccion">
         <h2>testimoniales</h2>
+        <div class="testimoniales contenedor clearfix">
 
-        <div class="testimonial">
-            <blockquote>
-                <p>Sed mollis velit sit amet felis condimentum ultrices. Fusce vehicula ut sem vitae semper. Nullam blandit neque eu semper ullamcorper. Duis commodo quam in orci condimentum ultricies.</p>
-                <footer>
-                    <img src="img/testimonial.jpg" alt="Imágen Testimonial">
-                    <cite>Osvaldo Escobar <span>Diseñador en @prisma</span></cite>
-                </footer>
-            </blockquote>
-            <blockquote>
-                <p>Sed mollis velit sit amet felis condimentum ultrices. Fusce vehicula ut sem vitae semper. Nullam blandit neque eu semper ullamcorper. Duis commodo quam in orci condimentum ultricies.</p>
-                <footer>
-                    <img src="img/testimonial.jpg" alt="Imágen Testimonial">
-                    <cite>Osvaldo Escobar <span>Diseñador en @prisma</span></cite>
-                </footer>
-            </blockquote>
-            <blockquote>
-                <p>Sed mollis velit sit amet felis condimentum ultrices. Fusce vehicula ut sem vitae semper. Nullam blandit neque eu semper ullamcorper. Duis commodo quam in orci condimentum ultricies.</p>
-                <footer>
-                    <img src="img/testimonial.jpg" alt="Imágen Testimonial">
-                    <cite>Osvaldo Escobar <span>Diseñador en @prisma</span></cite>
-                </footer>
-            </blockquote>
+            <div class="testimonial">
+                <blockquote>
+                    <p>Sed mollis velit sit amet felis condimentum ultrices. Fusce vehicula ut sem vitae semper. Nullam blandit neque eu semper ullamcorper. Duis commodo quam in orci condimentum ultricies.</p>
+                    <footer>
+                        <img src="img/testimonial.jpg" alt="Imágen Testimonial">
+                        <cite>Osvaldo Escobar <span>Diseñador en @prisma</span></cite>
+                    </footer>
+                </blockquote>
+
+            </div>
+            <div class="testimonial">
+                <blockquote>
+                    <p>Sed mollis velit sit amet felis condimentum ultrices. Fusce vehicula ut sem vitae semper. Nullam blandit neque eu semper ullamcorper. Duis commodo quam in orci condimentum ultricies.</p>
+                    <footer>
+                        <img src="img/testimonial.jpg" alt="Imágen Testimonial">
+                        <cite>Osvaldo Escobar <span>Diseñador en @prisma</span></cite>
+                    </footer>
+                </blockquote>
+
+            </div>
+            <div class="testimonial">
+                <blockquote>
+                    <p>Sed mollis velit sit amet felis condimentum ultrices. Fusce vehicula ut sem vitae semper. Nullam blandit neque eu semper ullamcorper. Duis commodo quam in orci condimentum ultricies.</p>
+                    <footer>
+                        <img src="img/testimonial.jpg" alt="Imágen Testimonial">
+                        <cite>Osvaldo Escobar <span>Diseñador en @prisma</span></cite>
+                    </footer>
+                </blockquote>
+
+            </div>
         </div>
     </section>
 
