--- a/index.html
+++ b/index.html
@@ -234,28 +234,28 @@
             <div class="testimonial">
                 <blockquote>
                     <p>Sed mollis velit sit amet felis condimentum ultrices. Fusce vehicula ut sem vitae semper. Nullam blandit neque eu semper ullamcorper. Duis commodo quam in orci condimentum ultricies.</p>
-                    <footer>
-                        <img src="img/testimonial.jpg" alt="Imágen Testimonial">
+                    <footer class="info-testimonial clearfix">
+                        <img src=" img/testimonial.jpg " alt="Imágen Testimonial ">
                         <cite>Osvaldo Escobar <span>Diseñador en @prisma</span></cite>
                     </footer>
                 </blockquote>
 
             </div>
-            <div class="testimonial">
+            <div class="testimonial ">
                 <blockquote>
                     <p>Sed mollis velit sit amet felis condimentum ultrices. Fusce vehicula ut sem vitae semper. Nullam blandit neque eu semper ullamcorper. Duis commodo quam in orci condimentum ultricies.</p>
-                    <footer>
-                        <img src="img/testimonial.jpg" alt="Imágen Testimonial">
+                    <footer class="info-testimonial clearfix">
+                        <img src="img/testimonial.jpg " alt="Imágen Testimonial ">
                         <cite>Osvaldo Escobar <span>Diseñador en @prisma</span></cite>
                     </footer>
                 </blockquote>
 
             </div>
-            <div class="testimonial">
+            <div class="testimonial ">
                 <blockquote>
                     <p>Sed mollis velit sit amet felis condimentum ultrices. Fusce vehicula ut sem vitae semper. Nullam blandit neque eu semper ullamcorper. Duis commodo quam in orci condimentum ultricies.</p>
-                    <footer>
-                        <img src="img/testimonial.jpg" alt="Imágen Testimonial">
+                    <footer class="info-testimonial clearfix">
+                        <img src="img/testimonial.jpg " alt="Imágen Testimonial ">
                         <cite>Osvaldo Escobar <span>Diseñador en @prisma</span></cite>
                     </footer>
                 </blockquote>
@@ -265,13 +265,13 @@
     </section>
 
 
-    <script src="js/vendor/modernizr-3.8.0.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="js/vendor/modernizr-3.8.0.min.js "></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js " integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin=" anonymous "></script>
     <script>
-        window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')
+        window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js "><\/script>')
     </script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/plugins.js "></script>
+    <script src="js/main.js "></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
@@ -284,7 +284,7 @@
         ga('set', 'transport', 'beacon');
         ga('send', 'pageview')
     </script>
-    <script src="https://www.google-analytics.com/analytics.js" async></script>
+    <script src="https://www.google-analytics.com/analytics.js " async></script>
 </body>
 
 </html>
