Creando y dando estilos a cuenta regresiva

--- a/index.html
+++ b/index.html
@@ -272,6 +272,27 @@
         </div>
     </div>
 
+    <section class="seccion">
+        <h2>Faltan</h2>
+        <div class="cuenta-regresiva">
+            <ul class="clearfix">
+                <li>
+                    <p class="numero">80</p> días
+                </li>
+                <li>
+                    <p class="numero">17</p> horas
+                </li>
+                <li>
+                    <p class="numero">26</p> minutos
+                </li>
+                <li>
+                    <p class="numero">47</p> segundos
+                </li>
+
+            </ul>
+        </div>
+    </section>
+
 
     <script src="js/vendor/modernizr-3.8.0.min.js "></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js " integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin=" anonymous "></script>
