arreglando error en testimoniales

--- a/index.html
+++ b/index.html
@@ -234,30 +234,30 @@
             <div class="testimonial">
                 <blockquote>
                     <p>Sed mollis velit sit amet felis condimentum ultrices. Fusce vehicula ut sem vitae semper. Nullam blandit neque eu semper ullamcorper. Duis commodo quam in orci condimentum ultricies.</p>
-                    <footer class="info-testimonial clearfix">
+                    <div class="info-testimonial clearfix">
                         <img src=" img/testimonial.jpg " alt="Imágen Testimonial ">
                         <cite>Osvaldo Escobar <span>Diseñador en @prisma</span></cite>
-                    </footer>
+                    </div>
                 </blockquote>
 
             </div>
             <div class="testimonial ">
                 <blockquote>
                     <p>Sed mollis velit sit amet felis condimentum ultrices. Fusce vehicula ut sem vitae semper. Nullam blandit neque eu semper ullamcorper. Duis commodo quam in orci condimentum ultricies.</p>
-                    <footer class="info-testimonial clearfix">
+                    <div class="info-testimonial clearfix">
                         <img src="img/testimonial.jpg " alt="Imágen Testimonial ">
                         <cite>Osvaldo Escobar <span>Diseñador en @prisma</span></cite>
-                    </footer>
+                    </div>
                 </blockquote>
 
             </div>
             <div class="testimonial ">
                 <blockquote>
                     <p>Sed mollis velit sit amet felis condimentum ultrices. Fusce vehicula ut sem vitae semper. Nullam blandit neque eu semper ullamcorper. Duis commodo quam in orci condimentum ultricies.</p>
-                    <footer class="info-testimonial clearfix">
+                    <div class="info-testimonial clearfix">
                         <img src="img/testimonial.jpg " alt="Imágen Testimonial ">
                         <cite>Osvaldo Escobar <span>Diseñador en @prisma</span></cite>
-                    </footer>
+                    </div>
                 </blockquote>
 
             </div>
