Finalizando los estilos del formulario

--- a/registro.html
+++ b/registro.html
@@ -240,7 +240,7 @@
                         </div>
                         <!--Orden-->
                         <div class="orden">
-                            <label for="regalo">Seleccione aquí un reglo</label>
+                            <label for="regalo">Seleccione aquí un regalo</label>
                             <select name="regalo" required>
                                 <option value="">Seleccione un regalo</option> 
                                 <option value="STI">Stickers</option>
@@ -253,11 +253,11 @@
                     </div>
                     <!--Extras-->
                     <div class="total">
-                        <p>Resumne:</p>
+                        <p>Resumen:</p>
                         <div id="lista-productos"></div>
                         <p>Total:</p>
                         <div id="suma-total"></div>
-                        <input id="btn-registro" type="submit">
+                        <input id="btn-registro" class="button" type="submit">
                     </div>
                 </div>
                 <!--Resumen-->
