--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <a href="#">Conferencia</a>
                 <a href="#">Calendario</a>
                 <a href="#">Invitados</a>
-                <a href="#">Reservaciones</a>
+                <a href="registro.html">Reservaciones</a>
             </nav>
         </div>
 
@@ -193,7 +193,7 @@
                             <li><i class="fas fa-check"></i>Todos los Talleres</li>
                             <li><i class="fas fa-check"></i>Snacks Gratis</li>
                         </ul>
-                        <a href="#" class="button hollow">Comprar</a>
+                        <a href="registro.html" class="button hollow">Comprar</a>
                     </div>
                 </li>
                 <li>
@@ -205,7 +205,7 @@
                             <li><i class="fas fa-check"></i>Todos los Talleres</li>
                             <li><i class="fas fa-check"></i>Snacks Gratis</li>
                         </ul>
-                        <a href="#" class="button">Comprar</a>
+                        <a href="registro.html" class="button">Comprar</a>
                     </div>
                 </li>
                 <li>
@@ -217,7 +217,7 @@
                             <li><i class="fas fa-check"></i>Todos los Talleres</li>
                             <li><i class="fas fa-check"></i>Snacks Gratis</li>
                         </ul>
-                        <a href="#" class="button hollow">Comprar</a>
+                        <a href="registro.html" class="button hollow">Comprar</a>
                     </div>
                 </li>
             </ul>
