Habilitando el boton de calcular y estableciendo los cáculos a efectuar

--- a/registro.html
+++ b/registro.html
@@ -241,7 +241,7 @@
                         <!--Orden-->
                         <div class="orden">
                             <label for="regalo">Seleccione aquí un regalo</label>
-                            <sel ect name="regalo" required>
+                            <select id="regalo" required>
                                 <option value="">Seleccione un regalo</option>
                                 <option value="STI">Stickers</option>
                                 <option value="PUL">Pulsera</option>
