Agregando más cálculos

--- a/registro.html
+++ b/registro.html
@@ -228,14 +228,14 @@
                 <div class="caja clearfix">
                     <div class="extras">
                         <div class="orden">
-                            <label for="camisa_evento">Remera del evento $1000 <small>(Promoción 7% Descuento)</small></label>
-                            <input type="number" min="0" id="camisa_evento" size="3" placeholder="0">
+                            <label for="remera_evento">Remera del evento $1000 <small>(Promoción 7% Descuento)</small></label>
+                            <input type="number" min="0" id="remera_evento" size="3" placeholder="0">
                         </div>
                         <!--Orden-->
 
 
                         <div class="orden">
-                            <label for="gorra_evento">Gorra del evento $6000 </label>
+                            <label for="gorra_evento">Gorra del evento $600 </label>
                             <input type="number" min="0" id="gorra_evento" size="3" placeholder="0">
                         </div>
                         <!--Orden-->
