Cargando librería del mapa

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald&family=PT+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+
     <link rel="stylesheet" href="css/main.css">
 
 
@@ -225,7 +227,7 @@
         </div>
     </section>
 
-    <div class="mapa"></div>
+    <div id="mapa"></div>
 
     <section class="seccion">
         <h2>testimoniales</h2>
@@ -331,6 +333,8 @@
     <script>
         window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js "><\/script>')
     </script>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+
     <script src="js/plugins.js "></script>
     <script src="js/main.js "></script>
 
