Mejorando lass tabs de conferencias

--- a/index.html
+++ b/index.html
@@ -120,6 +120,36 @@
                         </div>
                         <a href="#" class="button float-right">Ver Todos</a>
                     </div>
+                    <div id="conferencias" class="info-curso hiden clearfix">
+                        <div class="detalle-evento">
+                            <h3>Cómo ser Freelancer</h3>
+                            <p><i class="fas fa-clock"></i>10:00 hs</p>
+                            <p><i class="fas fa-calendar-alt"></i>11 dic</p>
+                            <p><i class="fas fa-user"></i>Gonzalo Fernández</p>
+                        </div>
+                        <div class="detalle-evento">
+                            <h3>Tecnología del Futuro</h3>
+                            <p><i class="fas fa-clock"></i>20:00 hs</p>
+                            <p><i class="fas fa-calendar-alt"></i>11 dic</p>
+                            <p><i class="fas fa-user"></i>Cesar Les</p>
+                        </div>
+                        <a href="#" class="button float-right">Ver Todos</a>
+                    </div>
+                    <div id="seminarios" class="info-curso hiden clearfix">
+                        <div class="detalle-evento">
+                            <h3>Diseño UI/UX para Móviles</h3>
+                            <p><i class="fas fa-clock"></i>10:00 hs</p>
+                            <p><i class="fas fa-calendar-alt"></i>12 dic</p>
+                            <p><i class="fas fa-user"></i>Luciana Deck</p>
+                        </div>
+                        <div class="detalle-evento">
+                            <h3>Los mejores Frameworks para trabajar</h3>
+                            <p><i class="fas fa-clock"></i>20:00 hs</p>
+                            <p><i class="fas fa-calendar-alt"></i>12 dic</p>
+                            <p><i class="fas fa-user"></i>Miguel Zapata</p>
+                        </div>
+                        <a href="#" class="button float-right">Ver Todos</a>
+                    </div>
                 </div>
 
             </div>
