Agregando el plugin de jquery animate number

--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
 
     <script src="js/plugins.js "></script>
+    <script src="js/jquery.animateNumber.js "></script>
     <script src="js/main.js "></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
