--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
         <div class="contenedor">
             <ul class="resumen-evento clearfix">
                 <li>
-                    <p class="numero">6</p>Invitados</li>
+                    <p class="numero"></p>Invitados</li>
                 <li>
-                    <p class="numero">15</p>Talleres</li>
+                    <p class="numero"></p>Talleres</li>
                 <li>
-                    <p class="numero">3</p>Días</li>
+                    <p class="numero"></p>Días</li>
                 <li>
-                    <p class="numero">9</p>Conferencias</li>
+                    <p class="numero"></p>Conferencias</li>
             </ul>
         </div>
     </div>
